<resources>
    <string name="app_name">BeautyApp</string>
    <string name="searchtext">Search</string>
    <string name="wdyw">What do you want?</string>
    <string name="style">Style</string>
    <string name="go">Go</string>
    <string name="book">Book</string>
    <string name="map">View in Map</string>
    <string name="close">Close</string>
    <string name="wait">Please wait...</string>
    <string name="turnNetOn">Please turn on internet and try again</string>
    <string name="exit_q">Do you want to exit?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="exit">Exit</string>
    <string name="url" translatable="false">http://sreejithecv-001-site1.ctempurl.com/</string>
    <string name="user_name">Name</string>
    <string name="password">Password</string>
    <string name="login">Log in</string>
    <string name="sign_up">Sign Up</string>
    <string name="logout">Log out</string>
    <string name="password_again">Confirm Password</string>
    <string name="email">E-mail</string>
    <string name="mob_no">Mobile Number</string>
    <string name="no_link_msg">Sorry!!! No links available to share...</string>
    <string name="add_fav_msg">Added to favorites..</string>
    <string name="remove_fav_msg">Removed from favorites..</string>
    <string name="othertypes">Other Styles Available</string>
    <string name="no_other_type">No other style are available current service</string>
    <string name="no_other_services">No other services available</string>
    <string name="male">Male</string>
    <string name="other_services">Other Services available</string>
    <string name="female">Female</string>
    <string name="name_error_msg">Enter a valid name</string>
    <string name="password_error_msg_1">Password should be atleast 8 characters </string>
    <string name="password_error_msg_2">Passwords doesnot match</string>
    <string name="mobile_no_error_msg">Enter a valid mobile number</string>
    <string name="email_error_msg">Enter a valid e-mail</string>
    <string name="gender_error_msg">Please select gender</string>
    <string name="ok_button">OK</string>
    <string name="login_error_msg">Please enter your e-mail and password</string>
    <string name="change_details">Change Account Details</string>
    <string name="delete_account">Delete Account of:</string>
    <string name="cancel">Cancel</string>
    <string name="new_password">New Password</string>
    <string name="old_password">Old Password</string>
    <string name="enter_valid_information">Enter Valid Information</string>
    <string name="password_incorrect_msg">Password Incorrect</string>
    <string name="please_login">Please Login</string>
    <string name="you_are_logged_in_as">You are logged in as :</string>
    <string name="pick_date">Pick a date to visit :</string>
    <string name="pick_time">Pick a time :</string>
    <string name="date_error">You can not book for that long</string>
    <string name="time_error">You have to choose between working hours of current service provider</string>
    <string name="time_past_error">You have to select a time in future</string>
    <string name="no_bookings">There are no bookings</string>
    <string name="booking_details">Booking Details</string>
    <string name="place">Place</string>
    <string name="time">Time</string>
    <string name="booked_at">Booked at</string>
    <string name="contact">Contact</string>
    <string name="contact2">Contact 2</string>
    <string name="rate">Rate</string>
    <string name="more_details">More Details</string>
    <string name="booking_id">Booking ID</string>
    <string name="cancel_booking_q">Are you sure you want to cancel this booking?</string>
    <string name="cancelled_at">Cancelled at</string>
    <string name="logout_q">Are you sure you want to logout?</string>
    <string name="visited_button">Past Bookings/Cancelled Bookings</string>
    <string name="booked_button">Booked items</string>
</resources>
