<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.tech.thrithvam.beautyapp.SearchGrid"
    android:background="@drawable/bg">


    <GridView

        android:id="@+id/gridView"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:numColumns="2"
        android:verticalSpacing="10dp"
        android:horizontalSpacing="10dp"
        android:scrollbarStyle="outsideOverlay"
        android:verticalScrollbarPosition="right"
        android:scrollbars="vertical"/>

   <!-- <ScrollView android:id="@+id/ScrlView" android:layout_width="fill_parent" android:layout_height="fill_parent">
        <LinearLayout android:id="@+id/layoutForScroll" android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content">
-->
    <com.tech.thrithvam.beautyapp.Transparent
        android:id="@+id/popup_window"
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="start"
        android:padding="30dp"
        android:clickable="true">
      <!--  android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"-->


        <EditText
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/searchText"
            android:hint="@string/searchtext"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/wdyw"
            android:id="@+id/text1"/>


        <Spinner
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:id="@+id/serviceSpinner"
            android:spinnerMode="dropdown" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/style"
            android:id="@+id/textView2" />

        <Spinner
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:id="@+id/sTypeSpinner"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:spinnerMode="dropdown" />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/go"
            android:id="@+id/go"
            android:background="#5a2fce"
            android:layout_gravity="start"
            android:textAlignment="textStart"
            android:textColor="#fffdfd"
            android:textSize="22sp"
            android:onClick="goSearch"/>

    </com.tech.thrithvam.beautyapp.Transparent>
     <!--   </LinearLayout>
    </ScrollView>-->
    <Button
        android:id="@+id/handle"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/searchtext"
        android:layout_alignParentTop="true"
        android:background="@drawable/handledn"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />


</RelativeLayout>
