<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.tech.thrithvam.beautyapp.UserAccount"
    android:background="@drawable/bg"
   >


    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="match_parent"
        android:id="@+id/Login"
       >
    <ImageView
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:id="@+id/imageView"
        android:src="@drawable/unknown_user"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/email"
        android:id="@+id/nameText"
        android:layout_below="@+id/imageView"
        android:layout_alignLeft="@+id/imageView"
        android:layout_alignStart="@+id/imageView"
        android:textColor="#000000" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/emailLogin"
        android:layout_below="@+id/nameText"
        android:layout_alignLeft="@+id/nameText"
        android:layout_alignStart="@+id/nameText"
        android:layout_alignRight="@+id/imageView"
        android:layout_alignEnd="@+id/imageView"
        android:inputType="textEmailAddress"
        android:maxLines="1"
        android:maxLength="40"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/password"
        android:id="@+id/passText"
        android:layout_below="@+id/emailLogin"
        android:layout_alignLeft="@+id/emailLogin"
        android:layout_alignStart="@+id/emailLogin"
        android:textColor="#000000" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/passwordLogin"
        android:layout_below="@+id/passText"
        android:layout_alignLeft="@+id/passText"
        android:layout_alignStart="@+id/passText"
        android:layout_alignRight="@+id/emailLogin"
        android:layout_alignEnd="@+id/emailLogin"
        android:maxLength="20"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:id="@+id/login"
        android:layout_below="@+id/passwordLogin"
        android:layout_alignRight="@+id/passwordLogin"
        android:layout_alignEnd="@+id/passwordLogin"
        android:background="#1acde9"
        android:textColor="#ffffff"
        android:onClick="login"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_up"
        android:id="@+id/sign_up"
        android:layout_below="@+id/passwordLogin"
        android:layout_alignLeft="@+id/passwordLogin"
        android:layout_alignStart="@+id/passwordLogin"
        android:background="#34269c"
        android:textColor="#ffffff"
        android:onClick="sign_up"/>

    </RelativeLayout>

  <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:id="@+id/UserDetails"
     >

      <View
          android:layout_width="2dp"
          android:layout_height="match_parent"
          android:background="?android:attr/listDivider"
          android:layout_alignBottom="@+id/button"
          android:layout_toLeftOf="@+id/button"
          android:layout_toStartOf="@+id/button"
          android:id="@+id/view" />
          <!--android:background="@android:color/darker_gray"-->


            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:id="@+id/button"
                android:onClick="logout"
                android:layout_alignParentTop="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:src="@drawable/logout"
                android:paddingLeft="4dp"
                />

            <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/user_name"
        android:id="@+id/user_name_view"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:adjustViewBounds="true"
                android:layout_toLeftOf="@+id/changeAccount"
                android:layout_toStartOf="@+id/changeAccount"
                android:paddingRight="5dp"
                style="@style/ShadowText"/>



            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/mob_no"
                android:id="@+id/mob_no_view"
                android:textColor="#000000"
                android:adjustViewBounds="true"
                android:layout_below="@+id/user_name_view"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_toLeftOf="@+id/changeAccount"
                android:layout_toStartOf="@+id/changeAccount" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/email"
                android:id="@+id/email_view"
                android:textColor="#3d1616"
                android:adjustViewBounds="true"
                android:layout_below="@+id/mob_no_view"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true" />
      <TableRow
          android:id="@+id/buttons"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_below="@+id/email_view"
          android:layout_alignRight="@+id/button"
          android:layout_alignEnd="@+id/button"
          >
      <Button
                android:layout_width="0dp"
          android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/booked_button"
                android:id="@+id/booked_items_button"
                android:layout_gravity="start"
                android:onClick="seeBookedItems"

                android:background="#5e26b2"
                android:textColor="#ffffff" />

            <Button
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"

                android:text="@string/visited_button"
                android:id="@+id/visited_items_button"
                android:layout_gravity="start"
                android:adjustViewBounds="true"

                android:onClick="view_visited_cancelled"
                android:background="#FF707070"
                android:textColor="#ffffff" />

      </TableRow>
      <ScrollView  android:layout_width="match_parent" android:layout_height="match_parent"
          android:adjustViewBounds="true"
          android:id="@+id/booked_items_scrollview"

          android:layout_below="@+id/buttons"
          android:layout_alignParentBottom="true">

      </ScrollView>

      <ScrollView  android:layout_width="fill_parent" android:layout_height="wrap_content"
android:adjustViewBounds="true"    android:layout_below="@+id/buttons"
          android:layout_alignParentBottom="true"
android:id="@+id/visited_items_scrollview">

      </ScrollView>

      <ProgressBar
          style="?android:attr/progressBarStyleLarge"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:id="@+id/progressBar_bookings"
          android:layout_below="@+id/buttons"
          android:layout_alignParentRight="true"
          android:layout_alignParentEnd="true"
          android:layout_alignParentLeft="true"
          android:layout_alignParentStart="true"
          android:indeterminate="false" />

      <ImageView
          android:layout_width="40dp"
          android:layout_height="wrap_content"
          android:id="@+id/changeAccount"
          android:onClick="changeAccountDetails"
          android:src="@drawable/edit"
          android:layout_alignParentTop="true"
          android:layout_alignRight="@+id/view"
          android:layout_alignEnd="@+id/view"
          android:layout_alignBottom="@+id/view" />
  </RelativeLayout>

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:id="@+id/sign_up_details"
        android:visibility="gone"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/user_name"
            android:id="@+id/textView3"
            android:layout_marginTop="33dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/user_name_signup"
            android:layout_below="@+id/textView3"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:maxLength="30"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/password"
            android:id="@+id/textView4"
            android:layout_below="@+id/user_name_signup"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/password1_signup"
            android:layout_below="@+id/textView4"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:maxLength="20"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/password_again"
            android:id="@+id/textView5"
            android:layout_below="@+id/password1_signup" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/password2_signup"
            android:layout_below="@+id/textView5"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/mob_no"
            android:id="@+id/textView6"
            android:layout_below="@+id/password2_signup"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="phone"
            android:ems="10"
            android:id="@+id/mob_no_signup"
            android:layout_below="@+id/textView6"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:maxLength="20"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/email"
            android:id="@+id/textView7"
            android:layout_below="@+id/mob_no_signup" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:ems="10"
            android:id="@+id/email_signup"
            android:layout_below="@+id/textView7"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:maxLength="40"/>


                <RadioGroup
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/email_signup"
                    android:id="@+id/gender"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:orientation="horizontal"
                    android:weightSum="1">
                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/male"
                        android:id="@+id/male"
                        android:layout_weight="1" />
                    <RadioButton
                        android:layout_width="188dp"
                        android:layout_height="wrap_content"
                        android:text="@string/female"
                        android:id="@+id/female"
                        android:layout_weight="1" />
                </RadioGroup>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sign_up"
            android:id="@+id/button2"
            android:layout_below="@+id/gender"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:onClick="sign_up_filled"/>

    </RelativeLayout>
</RelativeLayout>
