<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.tech.thrithvam.beautyapp.Home"
    android:isScrollContainer="true"
    android:background="@drawable/bg"
    >

    <ScrollView android:id="@+id/ScrlView" android:layout_width="fill_parent" android:layout_height="fill_parent"
        android:layout_above="@+id/go">
    <LinearLayout android:id="@+id/layoutForScroll" android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content">
    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/searchText"
        android:hint="@string/searchtext"
        android:inputType="text"
        android:maxLines="1"/>
       <!-- android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"-->


    <HorizontalScrollView
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:layout_width="fill_parent"
        android:layout_height="200dp"
        android:id="@+id/offersHorizontal"
        android:fillViewport="true"
        android:fadeScrollbars="false"
        android:adjustViewBounds="true"
        >
        <LinearLayout android:id="@+id/insidehoriz" android:orientation="horizontal" android:layout_width="wrap_content" android:layout_height="wrap_content">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="fill_parent"
            android:id="@+id/imageViewtemp1"
            android:src="@drawable/loadingimage"
            android:adjustViewBounds="true"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"/>
      <!--  <ImageView
            android:layout_width="match_parent"
            android:layout_height="fill_parent"
            android:id="@+id/imageViewtemp2"
            android:src="@drawable/loadingimage"
            android:adjustViewBounds="true"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            />-->
        <!--    <ImageView
                android:layout_width="match_parent"
                android:layout_height="fill_parent"
                android:id="@+id/imageViewtemp3"
                android:src="@drawable/loadingimage"
                android:adjustViewBounds="true"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"/>
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="fill_parent"
                android:id="@+id/imageViewtemp4"
                android:src="@drawable/loadingimage"
                android:adjustViewBounds="true"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                />-->
        </LinearLayout>
    </HorizontalScrollView>

       <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/wdyw"
        android:id="@+id/text1"/>


    <Spinner
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:id="@+id/serviceSpinner"
        android:spinnerMode="dropdown"
        android:background="#7dffffff" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/style"
        android:id="@+id/textView2" />

    <Spinner
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/sTypeSpinner"
        android:paddingBottom="@dimen/activity_vertical_margin"

        android:spinnerMode="dropdown"
        android:background="#7dffffff"
        android:textAlignment="gravity" />
</LinearLayout>
    </ScrollView>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/go"
        android:id="@+id/go"
        android:background="#5a2fce"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_gravity="start"
        android:textAlignment="textStart"
        android:textColor="#fffdfd"
        android:textSize="22sp"
        android:onClick="goSearch"/>
</RelativeLayout>
